# journal

./: .env  .make-release-support  CHANGELOG.md  Cargo.toml  Makefile  note  server.env
assets/: 321c0667-89fd-432c-8f98-b910993b0431.md
config/: development.toml
docker/: Dockerfile  entrypoint.sh
src/: config.rs  error.rs  gql.rs  init.rs  main.rs  model.rs  server.rs  settings.rs  watcher.rs
src/api/: gql.rs  model.rs
src/db/: model.rs  pg.rs
