[package]
name = "journal"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version="0.3", default-features = false, features = [ "postgres", "runtime-tokio", "macros", "uuid", "chrono" ] }
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
yaml-rust = "0.4"
snafu = { version = "0.6", features = [ "futures" ] }
# juniper = { version = "0.14", features = ["chrono", "uuid"] }
juniper = { git="https://github.com/graphql-rust/juniper.git", features = ["chrono", "uuid"] }
juniper_warp = { git="https://github.com/graphql-rust/juniper.git" }
inotify = "0.8"
futures = { version = "0.3", features = [ "compat" ] }
# clap = "2.33"
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
pretty_env_logger = "0.4"
log = "0.4"
warp = { version = "0.2", features = [ "tls" ] }
dotenv = "0.14"
